[package]
name = "etw_helpers"
version = "0.1.0"
edition = "2021"
resolver = "2"
license = "MIT"
rust-version = "1.67"
authors = ["Kyle Sabo", "Microsoft"]
repository = "https://github.com/microsoft/etw"

[features]
futures = ["dep:futures"]
crossbeam = ["dep:crossbeam-channel"]
default = ["futures", "crossbeam"]

[dependencies]
windows = {version="0.48.0", features=["Win32_System_Diagnostics_Etw", "Win32_Foundation", "Win32_System_Time"]}
rsevents = "0.3"
futures = {version="0.3", optional=true}
crossbeam-channel = {version="0.5", optional=true}

[dev-dependencies]
tokio = {version="1.0", features=["full"]}
tracelogging = ">= 1.1.0"
tracelogging_dynamic = ">= 1.1.0"
futures = {version="0.3"}
